--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,13 +1,13 @@
-<%= form_with model:book,local:true do |f| %>
+<%= form_with model: book do |f| %>
   <div class="form-group">
     <%= f.label :title %>
-    <%= f.text_field :title, class: 'form-control book_title' %>
+    <%= f.text_field :title, class:'form-control book_title' %>
   </div>
   <div class="form-group">
     <%= f.label :opinion %>
-    <%= f.text_area :body, class: 'form-control book_body' %>
+    <%= f.text_area :body, class:'form-control book_body' %>
   </div>
   <div class="form-group">
-    <%= f.submit class: 'btn btn-success' %>
+    <%= f.submit class:'btn btn-success' %>
   </div>
 <% end %>
