--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,6 +17,25 @@
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
       </tr>
+
+
+        <% if @book.favorited_by?(current_user) %>
+            <p>
+              <%= link_to book_favorites_path(@book), method: :delete do %>
+                ♥<%= @book.favorites.count %> いいね
+              <% end %>
+            </p>
+            <% else %>
+            <p>
+              <%= link_to book_favorites_path(@book), method: :post do %>
+                ♡<%= @book.favorites.count %> いいね
+              <% end %>
+            </p>
+          <% end %>
+
+          <p><%= link_to "#{book.book_comments.count} コメント", book_path(book.id) %></p>
+
+
     <% end %>
   </tbody>
 </table>
