--- a/app/views/searches/search_result.html.erb
+++ b/app/views/searches/search_result.html.erb
@@ -2,9 +2,9 @@
 
 <table class="table table-hover table-inverse">
   <!--検索対象モデルがUserの時 -->
-  <% if @range == "User" %>
+  <% if range == "User" %>
     <tbody>
-      <% @users.each do |user| %>
+      <% users.each do |user| %>
         <tr>
           <td><%= user.name %></td>
         </tr>
@@ -13,7 +13,7 @@
   <% else %>
     <!--検索対象モデルがUserではない時(= 検索対象モデルがBookの時) -->
     <tbody>
-      <% @books.each do |book| %>
+      <% books.each do |book| %>
         <tr>
           <td><%= book.title %></td>
           <td><%= book.body %></td>
