--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,17 +19,20 @@
           <td><%= @book.body %></td>
 
           <td>コメント数: <%= @book.book_comments.count %></td>
-          <td><%= render "favorites/btn", book: @book %></td>
+          <td class="btns"><%= render "favorites/btn", book: @book %></td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
         </tr>
       </table>
-
-      <%= render "book_comments/index", book: @book %>
-      <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
-
+      <div class="bci">
+        <%= render "book_comments/index", book: @book %>
+      </div>
+      <%= form_with(model:[@book, @book_comment], local: false) do |f| %>
+        <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに", class: "w-100" %>
+        <%= f.submit "送信する", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
+      <% end %>
     </div>
   </div>
 </div>
